--- a/Homework 4/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/Homework 4/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
    "source": [
     "# Create a list unique players then count length of that list\n",
     "player_count = len(purchase_data[\"SN\"].unique())\n",
-    "pd.Series({\"Total Players\" : player_count})"
+    "pd.Series({\"Total Players\": player_count})"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,18 +147,18 @@
        "0                     183        $ 3.05                  780     $ 2379.77"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Creating summary table by calling individual columns and applying methods on them\n",
-    "data_dic={\"Number of Unique Items\": len(purchase_data[\"Item ID\"].unique()), \n",
-    "        \"Average Price\": f'$ {round(purchase_data[\"Price\"].mean(), 2)}', \n",
-    "        \"Number of Purchases\": purchase_data[\"Purchase ID\"].count(), \n",
-    "        \"Total Revenue\": f'$ {purchase_data[\"Price\"].sum()}'\n",
-    "        }\n",
+    "data_dic = {\"Number of Unique Items\": len(purchase_data[\"Item ID\"].unique()),\n",
+    "            \"Average Price\": f'$ {round(purchase_data[\"Price\"].mean(), 2)}',\n",
+    "            \"Number of Purchases\": purchase_data[\"Purchase ID\"].count(),\n",
+    "            \"Total Revenue\": f'$ {purchase_data[\"Price\"].sum()}'\n",
+    "            }\n",
     "sum_df = pd.DataFrame(data_dic, index=[0])\n",
     "sum_df"
    ]
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,9 +258,9 @@
     "uni_df = purchase_data.drop_duplicates(\"SN\")\n",
     "# Creating summary tabel by grouping gender on the unique list and applying methods\n",
     "gender_sum = pd.DataFrame({\"Total Count\": uni_df.groupby(\"Gender\")[\"SN\"].count(),\n",
-    "                            \"Percentage of Players\": round(uni_df.groupby(\"Gender\")[\"SN\"].count()/player_count * 100, 2)\n",
-    "                            .astype('str') + \"%\"\n",
-    "                            })\n",
+    "                           \"Percentage of Players\": round(uni_df.groupby(\"Gender\")[\"SN\"].count()/player_count * 100, 2)\n",
+    "                           .astype('str') + \"%\"\n",
+    "                           })\n",
     "gender_sum"
    ]
   },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,17 +383,17 @@
     "g_tot = nonu_gendergb[\"Price\"].sum()\n",
     "# gender_df_add_total is a unique list of players with a added column of total purchase\n",
     "# is create by merging the unique list from last section and a groupby sum base on \"SN\"\n",
-    "gender_df_add_total = pd.merge(uni_df, purchase_data.groupby(\"SN\")[\"Price\"].sum(), on = \"SN\")\n",
+    "gender_df_add_total = pd.merge(uni_df, purchase_data.groupby(\"SN\")[\n",
+    "                               \"Price\"].sum(), on=\"SN\")\n",
     "# Counting average on the last DF base on gender, Price_y is total price per \"SN\"\n",
     "g_avg_person = gender_df_add_total.groupby(\"Gender\")[\"Price_y\"].mean()\n",
     "\n",
     "gender_analysis_df = pd.DataFrame({\"Purchase Count\": g_pur_count,\n",
-    "                                    \"Average Purchase Price\":\"$\" + round(g_avg_price, 2).astype(str),\n",
-    "                                    \"Total Purchase Value\": \"$\" + round(g_tot, 2).astype(str),\n",
-    "                                    \"Average Total Purchase Per Person\": \"$\" + round(g_avg_person, 2).astype(str)\n",
-    "                                    })\n",
-    "gender_analysis_df\n",
-    "\n"
+    "                                   \"Average Purchase Price\": \"$\" + round(g_avg_price, 2).astype(str),\n",
+    "                                   \"Total Purchase Value\": \"$\" + round(g_tot, 2).astype(str),\n",
+    "                                   \"Average Total Purchase Per Person\": \"$\" + round(g_avg_person, 2).astype(str)\n",
+    "                                   })\n",
+    "gender_analysis_df"
    ]
   },
   {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -512,30 +512,29 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Creating bins and bin names\n",
-    "bins = [0, 9, 14, 19, 24, 29 , 34, 39, 150]\n",
-    "group_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 150]\n",
+    "group_names = [\"<10\", \"10-14\", \"15-19\",\n",
+    "               \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "\n",
     "# Using the unique list from first part\n",
     "# Create a new list with each player binned into a age group\n",
-    "age_df=uni_df.copy()\n",
-    "age_df[\"Age Range\"]=pd.cut(uni_df[\"Age\"],bins, labels=group_names)\n",
+    "age_df = uni_df.copy()\n",
+    "age_df[\"Age Range\"] = pd.cut(uni_df[\"Age\"], bins, labels=group_names)\n",
     "\n",
     "# Create summary DF using groupby age range\n",
     "age_bin_sum = pd.DataFrame({\"Total Count\": age_df.groupby(\"Age Range\")[\"SN\"].count(),\n",
     "                            \"Percentage of Players\": round(age_df.groupby(\"Age Range\")[\"SN\"].count()/player_count * 100, 2)\n",
     "                            .astype(str) + \"%\"\n",
     "                            },\n",
-    "                            index=group_names)\n",
-    "age_bin_sum\n",
-    "\n",
-    "\n"
+    "                           index=group_names)\n",
+    "age_bin_sum"
    ]
   },
   {
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +687,7 @@
        "40+                                   $3.19  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +697,8 @@
     "# First create a non unique list with a added column for binned ages\n",
     "# Then sort with groupby\n",
     "age_anly_df = purchase_data.copy()\n",
-    "age_anly_df[\"Age Range\"]=pd.cut(purchase_data[\"Age\"],bins, labels=group_names)\n",
+    "age_anly_df[\"Age Range\"] = pd.cut(\n",
+    "    purchase_data[\"Age\"], bins, labels=group_names)\n",
     "age_gb = age_anly_df.groupby(\"Age Range\")\n",
     "\n",
     "# Creating variables to make table construction clearer and easier\n",
@@ -707,17 +707,17 @@
     "a_tot = age_gb[\"Price\"].sum()\n",
     "# age_df_add_total is a unique list of players with a added column of total purchase\n",
     "# is create by merging the unique list from last section and a groupby sum base on \"SN\"\n",
-    "age_df_add_total = pd.merge(age_df, purchase_data.groupby(\"SN\")[\"Price\"].sum(), on = \"SN\")\n",
+    "age_df_add_total = pd.merge(age_df, purchase_data.groupby(\"SN\")[\n",
+    "                            \"Price\"].sum(), on=\"SN\")\n",
     "# Counting average on the last DF base on age range, Price_y is total price per \"SN\"\n",
     "a_avg_person = age_df_add_total.groupby(\"Age Range\")[\"Price_y\"].mean()\n",
     "\n",
     "age_analysis_df = pd.DataFrame({\"Purchase Count\": a_pur_count,\n",
-    "                                    \"Average Purchase Price\":\"$\" + round(a_avg_price, 2).astype(str),\n",
-    "                                    \"Total Purchase Value\": \"$\" + round(a_tot, 2).astype(str),\n",
-    "                                    \"Average Total Purchase Per Person\": \"$\" + round(a_avg_person, 2).astype(str)\n",
-    "                                    })\n",
-    "age_analysis_df\n",
-    "\n"
+    "                                \"Average Purchase Price\": \"$\" + round(a_avg_price, 2).astype(str),\n",
+    "                                \"Total Purchase Value\": \"$\" + round(a_tot, 2).astype(str),\n",
+    "                                \"Average Total Purchase Per Person\": \"$\" + round(a_avg_person, 2).astype(str)\n",
+    "                                })\n",
+    "age_analysis_df"
    ]
   },
   {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "Iskadarya95               3                  $4.37                $13.1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,13 +831,13 @@
     "# First groupby players, then caculate the sum of thier spending, sort and return only 5 rows\n",
     "top_purchase = purchase_data.groupby(\"SN\")[\"Price\"].sum().sort_values().tail()\n",
     "# Using the top 5 \"SN\" found, to create new table with only values of the five players\n",
-    "top_df = pd.merge(purchase_data,top_purchase, on=\"SN\")\n",
+    "top_df = pd.merge(purchase_data, top_purchase, on=\"SN\")\n",
     "top_gb = top_df.groupby(\"SN\")\n",
     "# Create sum table by doing operation on groupby object\n",
     "top_sum = pd.DataFrame({\"Purchase Count\": top_gb[\"Purchase ID\"].count(),\n",
-    "                                    \"Average Purchase Price\":\"$\" + round(top_gb[\"Price_x\"].mean(), 2).astype(str),\n",
-    "                                    \"Total Purchase Value\": \"$\" + round(top_purchase, 2).astype(str)\n",
-    "                                    }).sort_values(\"Total Purchase Value\",ascending=False)\n",
+    "                        \"Average Purchase Price\": \"$\" + round(top_gb[\"Price_x\"].mean(), 2).astype(str),\n",
+    "                        \"Total Purchase Value\": \"$\" + round(top_purchase, 2).astype(str)\n",
+    "                        }).sort_values(\"Total Purchase Value\", ascending=False)\n",
     "top_sum"
    ]
   },
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "92                       $4.88               $39.04  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,16 +978,17 @@
     "# First generate a list of top five purchase count base on Item ID\n",
     "# There are many entries tied at 8 counts\n",
     "# Readme does not specify tie breaker so just using first that came out the my sort fuction\n",
-    "top_item_count=purchase_data.groupby(\"Item ID\")[\"Gender\"].count().sort_values().tail()\n",
+    "top_item_count = purchase_data.groupby(\n",
+    "    \"Item ID\")[\"Gender\"].count().sort_values().tail()\n",
     "# Using the top 5 itme IDs found, to create new table with only values of the five items, using merge\n",
-    "top_item_df = pd.merge(purchase_data,top_item_count, on=\"Item ID\")\n",
+    "top_item_df = pd.merge(purchase_data, top_item_count, on=\"Item ID\")\n",
     "\n",
     "top_item_gb = top_item_df.groupby(\"Item ID\")\n",
     "top_item_sum = pd.DataFrame({\"Item Name\": top_item_gb[\"Item Name\"].unique(),\n",
-    "                                    \"Purchase Count\": top_item_gb[\"Purchase ID\"].count(),\n",
-    "                                    \"Average Purchase Price\":\"$\" + round(top_item_gb[\"Price\"].mean(), 2).astype(str),\n",
-    "                                    \"Total Purchase Value\": \"$\" + round(top_item_gb[\"Price\"].sum(), 2).astype(str)\n",
-    "                                    }).sort_values(\"Purchase Count\",ascending=False)\n",
+    "                             \"Purchase Count\": top_item_gb[\"Purchase ID\"].count(),\n",
+    "                             \"Average Purchase Price\": \"$\" + round(top_item_gb[\"Price\"].mean(), 2).astype(str),\n",
+    "                             \"Total Purchase Value\": \"$\" + round(top_item_gb[\"Price\"].sum(), 2).astype(str)\n",
+    "                             }).sort_values(\"Purchase Count\", ascending=False)\n",
     "top_item_sum\n",
     "# Because of the count ties at 8 purchaes, my last entry is different from the starter results\n",
     "# Also for item names .unique() turns indidual entries to a list of one string\n",
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1106,7 @@
        "103                    $34.8  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,14 +1114,15 @@
    "source": [
     "# Again very similar to the last two sections\n",
     "# First generate top five list this time using the sum of prices instead\n",
-    "top_item_profit=purchase_data.groupby(\"Item ID\")[\"Price\"].sum().sort_values().tail()\n",
-    "profit_item_df = pd.merge(purchase_data,top_item_profit, on=\"Item ID\")\n",
+    "top_item_profit = purchase_data.groupby(\n",
+    "    \"Item ID\")[\"Price\"].sum().sort_values().tail()\n",
+    "profit_item_df = pd.merge(purchase_data, top_item_profit, on=\"Item ID\")\n",
     "profit_item_gb = profit_item_df.groupby(\"Item ID\")\n",
     "profit_item_sum = pd.DataFrame({\"Item Name\": profit_item_gb[\"Item Name\"].unique(),\n",
     "                                \"Purchase Count\": profit_item_gb[\"Purchase ID\"].count(),\n",
     "                                \"Total Purchase Value\": \"$\" + round(profit_item_gb[\"Price_x\"].sum(), 2).astype(str)\n",
-    "                                }).sort_values(\"Total Purchase Value\",ascending=False)\n",
-    "profit_item_sum\n"
+    "                                }).sort_values(\"Total Purchase Value\", ascending=False)\n",
+    "profit_item_sum"
    ]
   },
   {
